src/main/java/org/kirill/api/error/test/UserRepo.java
package org.kirill.api.error.test;

import org.springframework.data.jpa.repository.JpaRepository;

public interface UserRepo extends JpaRepository<User, Long> {
}
